--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 
          function HomePage() {
             const names = ['Jiun', 'Jihyun']
+            const [likes, setLikes] = useState()
+
+            function handleClick() {
+                setLikes(likes + 1)
+            }
           
             return (
               <div>
@@ -69,6 +74,9 @@
                     <li key={name}>{name}</li>
                   ))}
                 </ul>
+
+                <button onClick={handleClick}>Likes ({likes})</button>
+
               </div>
             )
           }
